# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  even_game.py  logic_game.py  logic_game_shot.py  logic_games.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc___game.py  calc__game.py  calc_game.py  even___game.py  even__game.py  even_game.py  gcd___game.py  gcd__game.py  gcd_game.py  prime___game.py  prime_game.py  progression___game.py  progression_game.py
brain_games/scripts/: brain___calc.py  brain___even.py  brain___gcd.py  brain___prime.py  brain___progression.py  brain__calc.py  brain__even.py  brain__gcd.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
