[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Artem-bav"]
readme = "README.md"
# packages = [{include = "hexlet_code"}]
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
#brain-calc = "brain_games.scripts.brain_calc:main"
#brain-gcd = "brain_games.scripts.brain_gcd:main"
#brain-progression = "brain_games.scripts.brain_progression:main"
#brain-prime = "brain_games.scripts.brain_prime:main"
#brain-ccalc = "brain_games.scripts.brain_ccalc:main"
#brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain---calc = "brain_games.scripts.brain___calc:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
